--- a/email_all.html
+++ b/email_all.html
@@ -127,10 +127,10 @@
                 }
         
                 document.getElementById('downloadButton').style.display = 'block';
-                document.getElementById('downloadButton').style.margin = 'auto';
+                document.getElementById('downloadButton').style.margin = '10px auto';
 
                 document.getElementById('downloadButton2').style.display = 'block';
-                document.getElementById('downloadButton2').style.margin = 'auto';
+                document.getElementById('downloadButton2').style.margin = '10px auto';
             };
         
             reader.readAsText(file);
